Add link to github repo

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,7 +10,7 @@
 <% if(visible) { %>
     <footer class="shadow d-flex justify-content-center mt-2 mb-5 py-3">
         <a href="/about" class="mr-5"><i class="fas fa-info"></i> About</a>
-        <a id="github-anchor" href="http://www.github.com" class="mr-5" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+        <a id="github-anchor" href="https://github.com/ali-kilinc/yelp-camp" class="mr-5" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         <span class="mr-5"><i class="far fa-copyright"></i> YelpCamp 2020</span>
     </footer>
 <% } %>
