improve campgrounds index page visually

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,10 +8,12 @@
 <% } %>
 
 <% if(visible) { %>
-    <footer class="shadow d-flex justify-content-center mt-2 mb-5 py-3">
-        <a href="/about" class="mr-5"><i class="fas fa-info"></i> About</a>
-        <a id="github-anchor" href="https://github.com/ali-kilinc/yelp-camp" class="mr-5" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        <span class="mr-5"><i class="far fa-copyright"></i> YelpCamp 2020</span>
+    <footer class="shadow mt-2 mb-5 py-3">
+        <div class="container d-flex justify-content-around">
+            <span class="green"><i class="text-dark far fa-copyright"></i> YelpCamp 2020</span>
+            <a href="/about"><i class="text-dark fas fa-info"></i> About</a>
+            <a id="github-anchor" href="https://github.com/ali-kilinc/yelp-camp" target="_blank"><i class="text-dark fab fa-github"></i> GitHub</a>
+        </div>
     </footer>
 <% } %>
 
