--- a/public/stylesheets/common.scss
+++ b/public/stylesheets/common.scss
@@ -10,9 +10,89 @@ body
   background-color: $color-background;
 }
 
+header {
+  background-color:rgba(33, 33, 33, 0.9);
+  position:relative;
+  z-index:5;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+  margin-bottom: 1.5rem;
+}
+
+.welcome{
+  position: relative;
+  z-index: 2;
+  padding: 4rem 2rem;
+  color :$color-background;
+}
+
+@keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-webkit-keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-moz-keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-ms-keyframes move-clouds-back {
+  from {background-position: 0;}
+  to {background-position:10000px 0;}
+}
+
+.stars, .twinkling {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+.stars {
+background:#000 url('/images/stars.png');
+background-position: top;
+background-repeat: no-repeat;
+background-size : cover;
+z-index:0;
+}
+
+.twinkling{
+background:transparent url('/images/twinkling.png') repeat top center;
+z-index:1;
+
+-moz-animation:move-twink-back 200s linear infinite;
+-ms-animation:move-twink-back 200s linear infinite;
+-o-animation:move-twink-back 200s linear infinite;
+-webkit-animation:move-twink-back 200s linear infinite;
+animation:move-twink-back 200s linear infinite;
+}
+
 h1
 {
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -20,7 +100,7 @@ h1
 @media (min-width: 768px) {
   h1
   {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
   }
 }
 
@@ -99,15 +179,6 @@ img.link:hover
   }
 }
 
-.jumbotron
-{
-  color : white;
-  background-image: url('/images/jumbotron.png');
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size : cover;
-}
-
 #campgrounds-area-row
 {
   display: flex;
@@ -165,10 +236,12 @@ img.link:hover
   padding : 1rem;
 }
 
-#github-anchor{
-  color: #24292e;
+footer{
+  font-size: 0.8rem;
 }
 
-footer{
-  font-size: 1rem;
+@media (min-width: 576px) {
+  footer{
+    font-size: 1rem;
+  }
 }
