--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,13 @@
 <%- include('../partials/header.ejs', {pageTitle : "Yelp Campgrounds", container : true, customStylesheets : ["/stylesheets/common.css"]}) %>
 
-<header>
-    <div class="shadow jumbotron d-flex flex-column align-items-center text-center">
-        <h1>YelpCamp</h1>        
-        <p class="lead">Welcome to our campfire where friends and marshmallows get <span class="font-italic">toasted</span> at the same time</p>
+<header class="shadow">
+    <div class="welcome d-flex flex-column align-items-center text-center">
+        <h1 class="mb-3 mb-sm-0">YelpCamp</h1>        
+        <p class="d-none d-sm-block lead">Welcome to our campfire where friends and marshmallows get <span class="font-italic">toasted</span> at the same time</p>
         <a class="btn btn-success btn-sm" href="/campgrounds/new">Add A New Campground</a>
-        <div></div>
     </div>
+    <div class="stars"></div>
+    <div class="twinkling"></div>
 </header>
 
 <section id="campgrounds-area" class="container">
@@ -19,6 +20,7 @@
         <div class="alert alert-danger" role="alert"><%- errorMessage %></div>
     <% } %>
 
+    <h3 class="text-center">Campgrounds</h3>
     <div id="campgrounds-area-row" class="row">
 
         <% allCamps.forEach(camp => { 
