--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -1,8 +1,14 @@
 body {
   padding-top: 50px;
   font-family: 'Gentium Basic', serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
   background-color: #f8f9fa;
+}
+
+@media (min-width: 576px) {
+  body {
+    font-size: 1.2rem;
+  }
 }
 
 header {
