--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -64,7 +64,7 @@ if(campground.reviews && campground.reviews.length > 0)
                     </h4>
                     <p class="card-text"><%= campground.description %></p>
                     <hr>
-                    <span class="text-muted font-italic">Submitted by <%= campground.author.username %></span>
+                    <span class="text-muted font-italic d-block">Submitted by <%= campground.author.username %></span>
                     <% if(currentUser && currentUser._id.equals(campground.author._id)){ %>
                         <a class="btn btn-success btn-sm float-right ml-1" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                         <form class="d-inline float-right" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
